# ExoRPI4

./: .gitignore  CMakeLists.txt  TeensyCommon.h
DynGen/: Dyn_gen_main.m  Dyn_gen_main_from_torso.m  GenHuman_Exo.m  Human_Exo_main.m  RobotMomentumGen.ipynb  cal_human_exo_momentum.m  cal_human_momentum.m  exo_com_pos.m  exo_joint_pos.m  exo_momentum.m  human1_momentum.m  human_joint_pos.m  human_load_com_pos.m  human_load_momentum.m  human_no_load_com_pos.m  human_no_load_momentum.m
DynGen/.ipynb_checkpoints/: RobotMomentumGen-checkpoint.ipynb
FunctionTest/include/: ADC.hpp  Encoder.hpp  Encoder_L.hpp
FunctionTest/src/: ADC.cpp  Encoder.cpp  Encoder_L.cpp  Encoder_R.cpp  Pin.cpp  main.cpp
MatGen/: csc_matrix.asv  csc_matrix.m
PressureCon/: .gitignore  main.ino
PressureCon/main/: main.ino
PressureCon/pc_read/: 141535_Apr122022.csv  141605_Apr122022.csv  142421_Apr122022.csv  142503_Apr122022.csv  142538_Apr122022.csv  142611_Apr122022.csv  142647_Apr122022.csv  142739_Apr122022.csv  142909_Apr122022.csv  142942_Apr122022.csv  143155_Apr122022.csv  161946_Apr122022.csv  162020_Apr122022.csv  162119_Apr122022.csv  175219_Apr112022.csv  175254_Apr112022.csv  175408_Apr112022.csv  175442_Apr112022.csv  175547_Apr112022.csv  175620_Apr112022.csv  175651_Apr112022.csv  175723_Apr112022.csv  175751_Apr112022.csv  175822_Apr112022.csv  201453_Apr092022.csv  201549_Apr092022.csv  201621_Apr092022.csv  201654_Apr092022.csv  201726_Apr092022.csv  201758_Apr092022.csv  201947_Apr092022.csv  202023_Apr092022.csv  202101_Apr092022.csv  DataAnalysis.ipynb  Dynamic_press.ipynb  Force_cali.ipynb  Friction_cali.ipynb  Static_cali.ipynb  Static_flow.ipynb  Static_flow2.ipynb  (+1 more)
PressureCon/pc_read/.ipynb_checkpoints/: 120053_Mar232022-checkpoint.csv  130906_Mar222022-checkpoint.csv  131646_Mar222022-checkpoint.csv  131957_Mar222022-checkpoint.csv  132307_Mar222022-checkpoint.csv  132645_Mar222022-checkpoint.csv  151340_Mar222022-checkpoint.csv  151611_Mar222022-checkpoint.csv  151725_Feb272022-checkpoint.csv  152009_Mar222022-checkpoint.csv  152246_Feb272022-checkpoint.csv  152314_Mar222022-checkpoint.csv  153044_Feb272022-checkpoint.csv  153429_Mar222022-checkpoint.csv  153810_Mar222022-checkpoint.csv  154249_Mar172022-checkpoint.csv  154346_Mar222022-checkpoint.csv  154455_Mar222022-checkpoint.csv  154638_Mar222022-checkpoint.csv  154927_Mar222022-checkpoint.csv  161912_Apr122022-checkpoint.csv  162016_Mar222022-checkpoint.csv  162158_Mar222022-checkpoint.csv  163933_Mar222022-checkpoint.csv  164456_Mar222022-checkpoint.csv  164609_Mar222022-checkpoint.csv  164709_Mar222022-checkpoint.csv  (+6 more)
RPI4/: CMakeLists.txt  CMakeLists_template.txt
RPI4/Resource/: exo_config.json  mpc_config.json
RPI4/include/: ADC.hpp  Butter.hpp  Common.hpp  Controller.hpp  CylinderParam.hpp  DigitalFilter.hpp  Encoder.hpp  Encoder_L.hpp  Encoder_R.hpp  ExoConfig.hpp  FSM.hpp  FilterParam.hpp  JointCon.hpp  MPC.hpp  MPC_param.hpp  PWM.hpp  Pin.hpp  RT.hpp  Recorder.hpp  SW_Valve.hpp  SensorHub.hpp  TCP_Exo_server.hpp  TCP_server.h  TCP_server.hpp  TankCon.hpp  Teensy.hpp  Timer.hpp  UDP_packet.hpp  UdpServer.hpp  ValveCon.hpp  Valves_hub.hpp
RPI4/src/: ADC.cpp  Common.cpp  Encoder.cpp  Encoder_L.cpp  Encoder_R.cpp  ExoConfig.cpp  FSM.cpp  JointCon.cpp  MPC.cpp  MPC_dyn.cpp  PWM.cpp  Pin.cpp  RT.cpp  SW_Valve.cpp  SensorHub.cpp  TCP_server.cpp  Teensy.cpp  Timer.cpp  UdpServer.cpp  Valves_hub.cpp  main.cpp
RPI4_src/include/: Controller_hub.hpp  Encoder_R.hpp
RPI4_src/src/: PWM.cpp  Pin.cpp
RPI_Teensy/: TeensyCommon.h
Teensy/: PWM_valve.h  Valve.h  teensy_control.ino
Teensy_pio/: platformio.ini
Teensy_pio/include/: PWM_valve.h
Teensy_pio/src/: main.cpp
exo_gui/: 123.json  Calibration.py  Common.py  Con_window.ui  ConfigLoader.py  ConnectionWindow.py  CylinderCalibrationWindow.py  CylinderParam.ui  CylnCalib.ui  ExoDataStruct.py  FSM_ParamsWindow.py  ImpConWindow.py  Imp_window.ui  ImpactCon.py  ImpactCon.ui  MPC_Training.py  PWM_TestFun.ui  PWM_TestWindow.py  PWM_value_window.ui  PhasePlotWindow.py  PlotJointWindow.py  PlotPressureWindow.py  PressureConWindow.py  PressureCon_window.ui  PwmValueWindow.py  SW_TestFun.ui  TCP_Con.py  UdpClient.py  dummy_exo.py  exo_config.json  exo_config_dummy.json  exo_gui_mw.ui  exo_mainWindow.py  joint_plots.ui  mpc_config.json  mpc_test.json  mpc_test_2.json  mw_layout_test.ui  qtgraph_example.py  test3.json  (+1 more)
exo_gui/UI/: Con_window.ui  CylnCalib.ui  FSM_ParamWindow.ui  FSM_Window.ui  Imp_window.ui  ImpactCon.ui  MPC_Train_window.ui  PWM_TestFun.ui  PWM_value_window.ui  Phase.ui  PressureCon_window.ui  exo_gui_mw.ui  exo_gui_mw2.ui  test.ui  two_col_graph.ui
include/: ADC.hpp  Common.hpp  Pin.hpp  SW_Valve.hpp  SensorHub.hpp  Timer.hpp
osqp_test/: CMakeLists.txt  MPC.h  osqp_demo.cpp
src/: Common.cpp  Encoder.cpp  Encoder_R.cpp  Pin.cpp  SensorHub.cpp  Timer.cpp  ValveCon.cpp  main.cpp
udp_test/: UDP_packet.hpp  UdpClient.py  UdpServer.hpp  a.out  main.cpp  main.py
(+274 files in other folders)
